Fix up the Aylien text analyzer to allow configuration to control it a little better.

--- a/config/default.example.yml
+++ b/config/default.example.yml
@@ -3,7 +3,13 @@ database: 'mongodb://localhost/hotstuff'
 analyzers:
   aylien:
     api_key: "GET YOUR API KEY AT MASHAPE.COM"
-
+    analytics:
+      # Available analytics from Aylien's text analysis API
+      # comment out if you don't want them!
+      - sentences
+      - classification
+      - hashtags
+      - concepts
 categories:
   personal-growth:
     - source: reddit
